--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,32 @@
 # The directory Mix will write compiled artifacts to.
 /_build/
+/examples/_build/
 
 # If you run "mix test --cover", coverage assets end up here.
 /cover/
+/examples/cover/
 
 # The directory Mix downloads your dependencies sources to.
 /deps/
+/examples/deps/
 
 # Where 3rd-party dependencies like ExDoc output generated docs.
 /doc/
+/examples/doc/
 
 # Ignore .fetch files in case you like to edit your project deps locally.
 /.fetch
+/examples/.fetch
 
 # If the VM crashes, it generates a dump, let's ignore it too.
 erl_crash.dump
+/examples/erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+/examples/*.ez
 
 # Ignore package tarball (built via "mix hex.build").
 potato-*.tar
+/examples/potato-*.tar
 
